--- a/main.css
+++ b/main.css
@@ -6,3 +6,39 @@ body {
     padding-bottom: 20px;
     color: green;
 }
+
+/* add styling for responsive iframes */
+.resp-container {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+}
+
+.resp-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+/* containers for media frames */
+.frame-container {
+    margin: 0 auto;
+    width: 80%;
+}
+
+.frame-container {
+    text-align: center;
+}
+
+@media only screen and (min-width: 600px) {
+    .audio-container {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .audio-container iframe {
+        margin-top: 20px;
+    }
+}
